cards added in contact page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -287,7 +287,7 @@ li{
 }
 .contact-form{
   max-width: 80vw;
-  margin: 20px auto 50px;
+  margin: 20px auto 30px;
   padding: 10px;
   border: 2px solid var(--main-color);
   border-radius: 10px;
@@ -322,6 +322,18 @@ li{
 .contact-form button:hover{
   color: #fff;
   background-color: var(--main-color);
+}
+.contact-box{
+  flex-wrap: wrap;
+}
+.contact-card{
+  color: var(--main-color);
+  border: 2px solid var(--main-color);
+  padding: 20px 10px;
+  border-radius: 5px;
+  margin: 10px;
+  font-size: 20px;
+  width: 300px;
 }
 .faq-box{
   width: 80%;
